apply plugin: 'java-library'

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

apply from: '../maven_local.gradle'

// The following is used for mavenCentral publish.
// apply from: '../maven_nexus.gradle'
